Improve metrics for api-server
Expose metrics for the number of requests with different status codes.

Expose metrics for the request latencies.

Refactor metrics-api to allow updating a value without redeclaring the metric and to retrieve values on-demand.

Add support for creating metrics of type histogram.

Remove unused classes

Fixes #3357